<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">서울행</string>
    <string name="ARCam">ARCam</string>
    <string name="Signup">Signup</string>
    <string name="Login">Login</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Name">Name</string>
    <string name="Submit">Submit</string>
    <string name="Signin">Signin</string>
    <string name="action_settings">action_settings</string>
    <string name="please_check_id">아이디 또는 비밀번호가 일치하지 않습니다.</string>
    <string name="can_not_connent_to_server">서버에 연결할 수 없습니다.</string>
    <string name="open_drawer">open draweropen draweropen draweropen draweropen draweropen drawer</string>
    <string name="close_drawer">close drawerclose drawerclose drawerclose drawerclose drawer</string>
    <string name="insert_quiz">Insert Quiz</string>
    <string name="region">Region</string>
    <string name="num">num</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="달성률">달성률 </string>
    <string name="닉네임">닉네임</string>
    <string name="등급">등급</string>
    <string name="순위">순위</string>
    <string name="점수">점수</string>
    <string name="남은힌트">힌트</string>
    <string name="해결한문제">해결한 문제</string>
    <string name="지역별달성률">지역별 정보 및 달성률</string>
    <string name="현재해결한문제없음">현재 해결한 문제가 없습니다.</string>
    <string name="코드를입력">인증코드를 입력하세요.</string>
    <string name="풀수있는문제없음">현재 풀 수 있는 문제가 없습니다. 새로운 문제를 획득해주세요.</string>
    <string name="최근문제">최근 문제</string>
    <string name="정답을입력하세요">정답을 입력하세요.</string>
    <string name="내순위">내 순위</string>
    <string name="환영">%s님 환영합니다!</string>
    <string name="카메라켜기">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;카메라 켜기</string>
    <string name="등급표">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;등급표</string>
    <string name="설정">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;설정</string>
    <string name="side_닉네임">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;닉네임&#160;:&#160;%s</string>
    <string name="side_힌트수">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;남은&#160;힌트&#160;수&#160;:&#160;%s</string>
    <string name="side_등급">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;등급&#160;:&#160;%s</string>
    <string name="side_점수">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;점수&#160;:&#160;%s</string>
    <string name="side_코드번호">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;코드번호&#160;:&#160;%s</string>
    <string name="승급">승급했습니다!</string>
    <string name="정답이다">정답입니다!</string>
    <string name="오답">오답입니다!</string>
    <string name="힌트없음">남은 힌트가 없습니다!</string>
    <string name="새문제">새 문제를 획득하였습니다!</string>
    <string name="이미가지고있는문제">이미 가지고 있는 문제 입니다.</string>
    <string name="등급차트">챌린저 = 450점 \n마스터 = 340점 \n다이아몬드 = 240점 \n플래티넘 = 160점 \n골드 = 90점 \n실버 = 40점 \n브론즈 = 10점</string>
    <string name="설명">사진을 찾아서 문제를 획득하고, 점수를 얻으십시오.\n점수에 따라 등급이 결정되고, 순위에 따라 상품이 지급됩니다.</string>
    <string name="등급정보">등급표</string>
    <string name="ghkrdls">확인</string>
    <string name="초보자">초보자</string>
    <string name="브론즈">브론즈</string>
    <string name="실버">실버</string>
    <string name="마스터">마스터</string>
    <string name="챌린저">챌린저</string>
    <string name="플래티넘">플래티넘</string>
    <string name="골드">골드</string>
    <string name="다이아몬드">다이아몬드</string>
    <string name="점수_0">0점</string>
    <string name="점수_10">10점</string>
    <string name="점수_40">40점</string>
    <string name="점수_90">90점</string>
    <string name="점수_160">160점</string>
    <string name="점수_240">240점</string>
    <string name="점수_340">340점</string>
    <string name="점수_450">450점</string>
    <string name="남">남</string>
    <string name="여">여</string>
    <string name="이름">이름</string>
    <string name="비밀번호">비밀번호</string>
    <string name="비밀번호확인">비밀번호\\n확인</string>
    <string name="성별">성별</string>
    <string name="age">나이</string>
    <string name="연락처">연락처</string>
    <string name="email">E-mail</string>
    <string name="회원가입">회원가입</string>
    <string name="id">ID</string>
    <string name="please_check_already_id">이미 같은 아이디가 존재합니다.</string>
    <string name="please_check_name">이미 같은 닉네임이 존재합니다.</string>
    <string name="확인">확인</string>
    <string name="취소">취소</string>
    <string name="중복확인">중복확인</string>
    <string name="비밀번호일치">비밀번호가 일치하지 않습니다.</string>
    <string name="사용가능">사용가능</string>
    <string name="EID">아이디를 입력해주세요.</string>
    <string name="EPass">6~18자리 영문+숫자+특수문자를 혼합한 비밀번호를 입력해주세요.</string>
    <string name="Ename">이름을 입력해주세요.</string>
    <string name="Eage">나이를 입력해주세요.</string>
    <string name="Ephone">핸드폰 번호를 입력해주세요.</string>
    <string name="EEmail">이메일을 입력해주세요.</string>
    <string name="checkplease">ID중복확인을 해주십시오.</string>
    <string name="회원가입성공">회원가입을 축하합니다!</string>
    <string name="GPSMessage">이 게임은 GPS 위치 데이터를 필요로 합니다. GPS를 설정하시겠습니까?</string>
    <string name="GPSN">아니요</string>
    <string name="GPSY">예</string>
    <string name="checkEmail">형식에 맞지 않는 메일 주소입니다.</string>
    <string name="아이디찾기">아이디 찾기</string>
    <string name="비밀번호찾기">비밀번호 찾기</string>
    <string name="비밀번호입력">비밀번호를 입력하세요.</string>
    <string name="확인메일보냄">인증 메일이 성공적으로 보내졌습니다.</string>
    <string name="아이디찾을수없음">일치하는 아이디가 없습니다.</string>
    <string name="코드입력">인증코드를 입력해주세요.</string>
    <string name="인증번호">인증번호</string>
    <string name="새비밀번호">새 비밀번호를 입력하세요.</string>
    <string name="코드불일치">인증코드가 일치하지 않습니다.</string>
    <string name="회원탈퇴">회원탈퇴</string>
    <string name="회원탈퇴비밀번호">회원탈퇴를 위해 비밀번호를 입력해주세요.</string>
    <string name="탈퇴재확인">정말로 탈퇴하시겠습니까?</string>
    <string name="Loading">응답대기중...</string>
    <string name="내정보설정">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;내 정보수정</string>
    <string name="정보수정질문">정보를 수정하시겠습니까?</string>
    <string name="정보수정">내 정보수정</string>
    <string name="비밀번호변경">비밀번호 변경하기</string>
    <string name="비밀번호변경완료">성공적으로 비밀번호를 변경하였습니다!</string>
    <string name="비밀번호변경비밀번호">비밀번호 변경을 위해 기존 비밀번호를 입력해주세요.</string>
    <string name="위도">위도</string>
    <string name="경도">경도</string>
    <string name="내위치">내 위치</string>
    <string name="지오코더">지오코딩 서비스 사용불가.</string>
    <string name="잘못된GPS">잘못된 GPS좌표</string>
    <string name="주소미발견">주소를 발견하지 못했습니다.</string>
    <string name="위치정보불가">위치정보 가져올 수 없음.</string>
    <string name="GPS활성여부">GPS를 활성화했는지 확인해주십시오.</string>
    <string name="GPS퍼미션체크박스">지도를 사용하시려면 스마트폰 설정에서 위치정보접근을 허가해야합니다.</string>
    <string name="GPS퍼미션">지도를 사용하시려면 위치정보접근을 허가해야합니다.</string>
    <string name="알림">알림</string>
    <string name="facebook_app_id">130262031034086</string>
    <string name="회원정보수정완료">회원정보수정이 완료되었습니다!</string>
    <string name="kakao_app_key">45d3abc0fba429258e010957df473e42</string>
    <string name="닉네임입력">닉네임을 입력해주세요.</string>
    <string name="같은닉네임존재">이미 사용중인 닉네임입니다.</string>
    <string name="계정연동실패">계정 동기화에 실패했습니다. 다시 시도해주십시오.</string>
    <string name="loginsuccess">%s님 환영합니다. 시작버튼을 눌러주세요!</string>
    <string name="naverclientid">S25ZUcloW2JU4Xk2SJTD</string>
    <string name="naversecret">IxuQXBjLMf</string>
    <string name="facebook_with">페이스북으로 로그인됨.</string>
    <string name="facebook_leave_msg">탈퇴하시면 계정의 모든 정보가 삭제됩니다.</string>
    <string name="mapview_text">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;지도 보기</string>
    <string name="subway_text">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;지하철 노선도</string>
    <string name="홈">서울행</string>
    <string name="퀴즈">퀴즈</string>
    <string name="랭킹">랭킹</string>
    <string name="내정보">내 정보</string>
    <string name="탈퇴성공">회원탈퇴가 정상적으로 처리되었습니다.</string>

</resources>